deployments/postgres/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - image: dpage/pgadmin4:latest
          imagePullPolicy: Always
          name: pgadmin
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
