deployments/postgres/pgsql-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  labels:
    app: postgres
spec:
  type: LoadBalancer
  ports:
  - port: 5432
    name: postgres
  selector:
    app: postgres
