deployments/postgres/pgsql-service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-np
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
  - port: 5432
    nodePort: 30432
    name: postgres
  selector:
    app: postgres
